test/lexer/correct/cor_04_operators_relational.pl0
program relations;
var x, y;
begin
  if x = y then x := 1;
  if x <> y then x := 1;
  if x < y then x := 1;
  if x <= y then x := 1;
  if x > y then x := 1;
  if x >= y then x := 1;
end
