test/lexer/error/err_01_illegal_char.pl0
program illegal;
var x;
begin
  x := 1 @ 2;  // Illegal character
end
